--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Short stories'
 - !lcsh 'Scotland -- Social life and customs -- Fiction'
+- GITenberg
 tableOfContents: Crawford's sair strait -- James Blackie's revenge -- Facing his enemy
   -- Andrew Cargill's confession -- One wrong step -- Lile Davie.
 title: Scottish sketches
